<resources>
    <string name="app_name">Ripetizioni</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_home">Lezioni prenotate</string>
    <string name="action_catalog">Lezioni Disponibili</string>
    <string name="action_teachers">Elenco Insegnanti</string>
    <string name="action_courses">Elenco Corsi</string>
    <string name="action_courses_teacher">course_teacher</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="label_user">Utente</string>

    <!-- Strings used for error messages-->
    <string name="msg_login_missing_inpus">Inserire username e password</string>
    <string name="msg_login_error">Credenziali di accesso errate</string>

    <!-- Strings used for fragments for navigation -->

    <string name="dialog_statelesson_title">Modifica stato prenotazione</string>
    <string name="dialog_statelesson_done">Segna come effettuata</string>
    <string name="dialog_statelesson_delete">Annulla prenotazione</string>
    <string name="dialog_save">Salva</string>
    <string name="dialog_cancel">Annulla</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="dialog_newreservation_title">Nuova prenotazione</string>
    <string name="dialog_newreservation_message">Confermi di voler prenotare questa lezione?</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>