<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonLogin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prova_3"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:contentDescription="@string/action_login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center"
        android:text="Benvenuto su Ripetizioni"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:clickable="true"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textLogin"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/action_login"

                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/login_username_label"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/login_password_label"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="login"
                android:text="@string/action_login"
                android:textColor="@color/white"
                app:backgroundTint="@color/teal_700" />

            <TextView
                android:id="@+id/textErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:textColor="@color/danger"
                android:visibility="invisible" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="172dp"
        android:layout_height="180dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
